@@ -1,17 +1,16 @@
 package com.fuel.tracker.fueltracker.service;
 
 import com.fuel.tracker.fueltracker.model.dto.VehicleDto;
+import com.fuel.tracker.fueltracker.model.entity.Customer;
 import com.fuel.tracker.fueltracker.model.entity.Vehicle;
 import com.fuel.tracker.fueltracker.repository.CustomerRepository;
 import com.fuel.tracker.fueltracker.repository.VehicleRepository;
-import lombok.AllArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public record VehicleService(VehicleRepository vehicleRepository,
@@ -21,24 +20,30 @@ public record VehicleService(VehicleRepository vehicleRepository,
     public List<VehicleDto> getAllVehicles() {
         return vehicleRepository.findAll().stream()
                 .map(vehicle -> mapper.map(vehicle, VehicleDto.class))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<Vehicle> getAllUserVehicles() {
         String email = SecurityContextHolder.getContext().getAuthentication().getName();
-        long userId = customerRepository.findByEmail(email).orElseThrow(IllegalStateException::new).getId();
+        long userId = customerRepository.findByEmail(email)
+                .orElseThrow(() -> new IllegalArgumentException("Customer with given email not found."))
+                .getId();
+
         return vehicleRepository.findAllByCustomerId(userId).orElseThrow(IllegalStateException::new);
     }
 
-    public Vehicle addVehicle(Vehicle vehicle) {
+    public VehicleDto addVehicle(Vehicle source) {
         String email = SecurityContextHolder.getContext().getAuthentication().getName();
-        return customerRepository.findByEmail(email).map(customer -> {
-            vehicle.setCustomer(customer);
-            return vehicleRepository.save(vehicle);
-        }).orElseThrow(IllegalStateException::new);
+        Customer customer = customerRepository.findByEmail(email)
+                .orElseThrow(() -> new IllegalArgumentException("Customer with given id not found."));
+
+        source.setCustomer(customer);
+        Vehicle vehicle = vehicleRepository.save(source);
+
+        return new VehicleDto(vehicle);
     }
 
-    public Vehicle getVehicleByName(String vehicleName) {
+    public Vehicle getCustomerVehicleByName(String vehicleName) {
         List<Vehicle> vehicles = getAllUserVehicles();
 
         return vehicles.stream()
@@ -46,7 +51,7 @@ public record VehicleService(VehicleRepository vehicleRepository,
                 .findAny().orElseThrow(IllegalStateException::new);
     }
 
-    public void deleteVehicle(String vehicleName) {
+    public void deleteCustomerVehicleByName(String vehicleName) {
         List<Vehicle> vehicles = getAllUserVehicles();
 
         Optional<Vehicle> vehicle = vehicles.stream()
